Add gotest.sh to the stage.

--- a/.travis/common_pipeline.yml
+++ b/.travis/common_pipeline.yml
@@ -13,6 +13,9 @@ before_script:
 install:
   - go get -t -v ./...
 
+script:
+  - ./openstack-k8s-operators-ci/test-runner/gotest.sh
+
 jobs:
   include:
     - stage: "lintvet"
