Restore GOLANG_BUILDER override

--- a/osbs_dockerfile_vars/default.env
+++ b/osbs_dockerfile_vars/default.env
@@ -1,3 +1,4 @@
+GOLANG_BUILDER="openshift/golang-builder:1.16"
 OPERATOR_BASE_IMAGE="registry.redhat.io/ubi8/ubi-minimal:latest"
 REMOTE_SOURCE_SUBDIR="app"
 GO_BUILD_EXTRA_ARGS="-mod readonly -v "
