--- a/.github/workflows/golangci-lint.yaml
+++ b/.github/workflows/golangci-lint.yaml
@@ -50,3 +50,27 @@ jobs:
         run: ./openstack-k8s-operators-ci/test-runner/golint.sh
       - name: Run gotest.sh
         run: ./openstack-k8s-operators-ci/test-runner/gotest.sh
+
+  testmaster18:
+    name: github (govet, golint and gotest) OSPdO master
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.18.x
+      - name: Checkout project code
+        uses: actions/checkout@v2
+        with:
+          repository: abays/cinder-operator
+          ref: fix_statefulset_patch
+      - name: Checkout openstack-k8s-operators-ci project
+        uses: actions/checkout@v2
+        with:
+          path: ./openstack-k8s-operators-ci
+      - name: Run govet.sh
+        run: ./openstack-k8s-operators-ci/test-runner/govet.sh
+      - name: Run golint.sh
+        run: ./openstack-k8s-operators-ci/test-runner/golint.sh
+      - name: Run gotest.sh
+        run: ./openstack-k8s-operators-ci/test-runner/gotest.sh
