Use Hash instead of Branch name to replace go.mod
Before this patch, We were replacing go.mod in openstack-operator with
PR commit using branch name.

ex:
~~
go mod edit --replace
github.com/openstack-k8s-operators/keystone-operator/api@$version=
github.com/ysandeep93/keystone-operator/api@dependabot/go_modules/
sigs.k8s.io/controller-runtime-0.13.1
~~~

After Go 1.13, there is an known issue if we have slashes in branch name.[1]

~~~
$go mod tidy
go: errors parsing go.mod:
/tmp/openstack-operator/go.mod:97:
replace github.com/ysandeep93/keystone-operator/api: version
"dependabot/go_modules/sigs.k8s.io/controller-runtime-0.13.1"
invalid: version "dependabot/go_modules/sigs.k8s.io/controller-runtime-0.13.1"
invalid: disallowed version string
~~~

With this patch, updating our logic to use hash of branch instead of branch
name, same workaround/fix is mentioned here[2].

[1] https://github.com/golang/go/issues/32955
[2] https://github.com/golang/go/issues/34175#issuecomment-529502530

--- a/.github/workflows/reusable-workflow-e2e.yaml
+++ b/.github/workflows/reusable-workflow-e2e.yaml
@@ -183,10 +183,10 @@ jobs:
       run: |
         pushd ${{ github.workspace }}
         version=`cat go.mod | grep -m 1 github.com/openstack-k8s-operators/keystone-operator/api | cut -d ' ' -f2`
-        go mod edit --replace github.com/openstack-k8s-operators/${{ inputs.operator_name }}/api@$version=github.com/${{github.event.pull_request.head.repo.full_name}}/api@${{ github.head_ref }}
+        go mod edit --replace github.com/openstack-k8s-operators/${{ inputs.operator_name }}/api@$version=github.com/${{github.event.pull_request.head.repo.full_name}}/api@${{github.event.pull_request.head.sha}}
         go mod tidy
         cd ./apis/
-        go mod edit --replace github.com/openstack-k8s-operators/${{ inputs.operator_name }}/api@$version=github.com/${{github.event.pull_request.head.repo.full_name}}/api@${{ github.head_ref }}
+        go mod edit --replace github.com/openstack-k8s-operators/${{ inputs.operator_name }}/api@$version=github.com/${{github.event.pull_request.head.repo.full_name}}/api@${{github.event.pull_request.head.sha}}
         go mod tidy
         git diff
         popd
