Run kuttl tests in e2e job
Create a script to run kuttl tests and update the e2e job
workflow to trigger kuttl tests.

--- a/.github/workflows/reusable-workflow-e2e.yaml
+++ b/.github/workflows/reusable-workflow-e2e.yaml
@@ -313,7 +313,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          repository: openstack-k8s-operators/openstack-k8s-operators-ci
+          repository: tripleo-ci/openstack-k8s-operators-ci
+          ref: run_kuttl_tests
 
       - name: Install OpenStack Client
         run: |
@@ -357,6 +358,18 @@ jobs:
           command: |
             oc login -u kubeadmin -p ${{ secrets.SNO_KUBEADMIN_PASSWORD }} https://api.${{ secrets.SNO_DOMAIN_NAME }}:6443 --insecure-skip-tls-verify
             bash ${{ github.workspace }}/.github/cluster_pre_steps.sh
+
+      - name: Run Kuttl tests
+        uses: nick-fields/retry@v2
+        with:
+          timeout_minutes: 10
+          max_attempts: 5
+          retry_wait_seconds: 20
+          retry_on: error
+          shell: bash
+          command: |
+            oc login -u kubeadmin -p ${{ secrets.SNO_KUBEADMIN_PASSWORD }} https://api.${{ secrets.SNO_DOMAIN_NAME }}:6443 --insecure-skip-tls-verify
+            bash ${{ github.workspace }}/.github/run_kuttl_tests.sh ${{ inputs.operator_name }} ${{ env.imageregistry }}\/${{ env.imagenamespace }} ${{ github.sha }}
 
       - name: Install operators
         uses: nick-fields/retry@v2
