Adds git to pre-commit image
git is needed by ci to clone repos while testing code
across different repos

--- a/images/pre-commit/Dockerfile
+++ b/images/pre-commit/Dockerfile
@@ -1,4 +1,4 @@
 FROM registry.ci.openshift.org/openshift/release:rhel-8-release-golang-1.18-openshift-4.12
-RUN yum update -y && yum install -y python39 python39-pip
+RUN yum update -y && yum install -y git python39 python39-pip
 RUN alternatives --set python3 /usr/bin/python3.9
 RUN pip3 install pre-commit
