--- a/images/build-root/Dockerfile.custom
+++ b/images/build-root/Dockerfile.custom
@@ -1,8 +1,9 @@
 FROM registry.ci.openshift.org/openshift/release:rhel-8-release-golang-1.18-openshift-4.12
 ARG SDK_VERSION=v1.23.0
 ARG KUSTOMIZE_VERSION=v4.5.7
+ARG KUTTL_VERSION=v0.15.0
 USER root
-RUN yum install -y gcc git jq make python39 python39-pip && yum clean all && rm -rf /var/cache/dnf/*
+RUN yum install -y gcc git jq make python39 python39-pip skopeo && yum clean all && rm -rf /var/cache/dnf/*
 RUN alternatives --set python3 /usr/bin/python3.9
 RUN curl -s -L "https://github.com/operator-framework/operator-sdk/releases/download/${SDK_VERSION}/operator-sdk_linux_amd64" -o operator-sdk
 RUN chmod +x ./operator-sdk
@@ -11,3 +12,7 @@ RUN /usr/local/bin/operator-sdk version
 RUN curl -s -L https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2F${KUSTOMIZE_VERSION}/kustomize_${KUSTOMIZE_VERSION}_linux_amd64.tar.gz | tar xvzf - -C /usr/local/bin kustomize
 RUN chmod +x /usr/local/bin/kustomize
 RUN /usr/local/bin/kustomize version
+RUN curl -s -L "https://github.com/kudobuilder/kuttl/releases/download/${KUTTL_VERSION}/kubectl-kuttl_${KUTTL_VERSION#v}_linux_x86_64" -o kubectl-kuttl
+RUN chmod +x ./kubectl-kuttl
+RUN mv ./kubectl-kuttl /usr/local/bin
+RUN /usr/local/bin/kubectl-kuttl version
