Add 'yq' to tempest image
'yq' will be used to edit some yaml files.

--- a/images/tempest-container/Dockerfile
+++ b/images/tempest-container/Dockerfile
@@ -16,5 +16,8 @@ RUN git clone https://git.openstack.org/openstack/openstack-tempest-skiplist && 
     pushd openstack-tempest-skiplist && \
     python3 -m pip install . && \
     popd
+RUN curl -s -L "https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64" -o yq
+RUN chmod +x ./yq
+RUN mv ./yq /usr/local/bin
 RUN curl -s -L https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/stable/openshift-client-linux.tar.gz | tar xvzf - -C /usr/local/bin oc
 RUN chmod +x /usr/local/bin/oc
