Force go version during index build too
golang 1.21 is pushed by default in latest ubuntu runner image[1]
and with that openstack-operator index build fails, we need
to force compatible golang version during index image builds too
like it's done with bundle image builds.

[CI Fix] Also drop references of openstack-tempest-skiplist which
is retired[2]

[1] https://github.com/actions/runner-images/releases/tag/ubuntu22%2F20240225.1
[2] https://opendev.org/openstack/openstack-tempest-skiplist

--- a/.github/workflows/reusable-build-operator.yaml
+++ b/.github/workflows/reusable-build-operator.yaml
@@ -198,6 +198,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: ${{ inputs.go_version }}
+
     - name: Checkout ${{ inputs.operator_name }}-operator repository
       uses: actions/checkout@v4
 
