--- a/images/build-root/Dockerfile.rhel-9.custom
+++ b/images/build-root/Dockerfile.rhel-9.custom
@@ -1,6 +1,7 @@
 FROM registry.ci.openshift.org/openshift/release:rhel-9-release-golang-1.20-openshift-4.14
 ARG SDK_VERSION=v1.31.0
 ARG KUSTOMIZE_VERSION=v5.0.3
+ARG YQ_VERSION=v4.44.5
 USER root
 RUN yum install -y gcc git jq make python python-pip skopeo && yum clean all && rm -rf /var/cache/dnf/*
 RUN curl -s -L "https://github.com/operator-framework/operator-sdk/releases/download/${SDK_VERSION}/operator-sdk_linux_amd64" -o operator-sdk
@@ -10,3 +11,7 @@ RUN /usr/local/bin/operator-sdk version
 RUN curl -s -L https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2F${KUSTOMIZE_VERSION}/kustomize_${KUSTOMIZE_VERSION}_linux_amd64.tar.gz | tar xvzf - -C /usr/local/bin kustomize
 RUN chmod +x /usr/local/bin/kustomize
 RUN /usr/local/bin/kustomize version
+
+RUN curl -s -L https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_amd64 -o /usr/local/bin/yq
+RUN chmod +x /usr/local/bin/yq
+RUN /usr/local/bin/yq --version
