Disable webhooks by default when possible
This change adds the environment variable required to disable
operator webhooks in the build. This will only disable webhooks in operators
that have the option to do so in their specific Dockerfile. For example:
https://github.com/openstack-k8s-operators/heat-operator/pull/466

Signed-off-by: Brendan Shephard <bshephar@redhat.com>

--- a/.github/workflows/reusable-build-operator.yaml
+++ b/.github/workflows/reusable-build-operator.yaml
@@ -70,6 +70,8 @@ jobs:
         tags: ${{ env.latesttag }} ${{ github.sha }}
         containerfiles: |
           ./Dockerfile
+        envs:
+        - ENABLE_WEBHOOKS=false
 
     - name: Push ${{ inputs.operator_name }}-operator To ${{ env.imageregistry }}
       uses: redhat-actions/push-to-registry@v2
