[force-bump] make sure modules are synced
In bump PRs it happened that the dependencies are not in sync
in ./go.mod and ./api/go.mod. This makes the pre-commit job to
fail.
This change make sure we init the go.work before running force-bump
and call a `go work sync` afterwards. This should prevent those
diff in ./go.mod and ./api/go.mod.

Signed-off-by: Martin Schuppert <mschuppert@redhat.com>

--- a/.github/workflows/force-bump-pull-request.yaml
+++ b/.github/workflows/force-bump-pull-request.yaml
@@ -50,8 +50,11 @@ jobs:
         GOTOOLCHAIN: local
       run: |
         cd $GITHUB_WORKSPACE
+        go work init
+        make gowork
         BRANCH='${{ inputs.branch_name }}' make force-bump
         make tidy
+        go work sync
         make manifests generate
 
     - name: run make bindata
