Fix lowercase of latesttag
Followup to da4f68d39e9db2614e603e0ece5ccff8294a1ff4, which caused an
error:

echo
"latesttag=${OSPRH-17457-OpenStackDataPlaneService_overrides_labels-latest"@L}
>> $GITHUB_ENV
/home/runner/work/_temp/079b061d-69fc-4706-8666-808f44065487.sh: line 1:
unexpected EOF while looking for matching `"'

Jira: OSPRH-23119
Signed-off-by: James Slagle <jslagle@redhat.com>

--- a/.github/workflows/reusable-build-operator.yaml
+++ b/.github/workflows/reusable-build-operator.yaml
@@ -74,7 +74,8 @@ jobs:
     - name: Set latest tag for non main branch
       if: "${{ steps.branch-name.outputs.current_branch != 'main' }}"
       run: |
-        echo "latesttag=${${{ steps.branch-name.outputs.current_branch }}-latest"@L} >> $GITHUB_ENV
+        latesttag=${{ steps.branch-name.outputs.current_branch }}-latest
+        echo "latesttag=${latesttag@L}" >> $GITHUB_ENV
 
     - name: Buildah Action
       id: build-operator
@@ -167,7 +168,8 @@ jobs:
     - name: Set latest tag for non main branch
       if: "${{ steps.branch-name.outputs.current_branch != 'main' }}"
       run: |
-        echo "latesttag=${{ steps.branch-name.outputs.current_branch }}-latest" >> $GITHUB_ENV
+        latesttag=${{ steps.branch-name.outputs.current_branch }}-latest
+        echo "latesttag=${latesttag@L}" >> $GITHUB_ENV
 
     - name: Build operator-bundle using buildah
       id: build-operator-bundle
@@ -229,7 +231,8 @@ jobs:
     - name: Set latest tag for non main branch
       if: "${{ steps.branch-name.outputs.current_branch != 'main' }}"
       run: |
-        echo "latesttag=${{ steps.branch-name.outputs.current_branch }}-latest" >> $GITHUB_ENV
+        latesttag=${{ steps.branch-name.outputs.current_branch }}-latest
+        echo "latesttag=${latesttag@L}" >> $GITHUB_ENV
 
     - name: Install opm
       uses: redhat-actions/openshift-tools-installer@v1
